Reusing bearer auth security in auth & user. Added get customer list & get customer info API

--- a/auth_service-contract.yml
+++ b/auth_service-contract.yml
@@ -244,9 +244,7 @@ paths:
 components:
   securitySchemes:
     BearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+      $ref: "common_schemas-contract.yml#/components/securitySchemes/BearerAuth"
   schemas:
     ErrorData:
       type: object
