--- a/user_service-contract.yml
+++ b/user_service-contract.yml
@@ -41,7 +41,7 @@ paths:
           schema:
             type: integer
           required: false
-          description: Get N (perPageQty) number of customers in this response
+          description: Get N (perPageQty) number of users in this response
       responses:
         '200':
           description: Successfully fetched customer list
@@ -110,6 +110,7 @@ paths:
             application/json: 
               schema:
                 $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
+  
   /v1/salesmen:
     get:
       security:
@@ -139,7 +140,7 @@ paths:
           schema:
             type: integer
           required: false
-          description: Get N (perPageQty) number of customers in this response
+          description: Get N (perPageQty) number of users in this response
       responses:
         '200':
           description: Successfully fetched salesman list
@@ -209,6 +210,223 @@ paths:
               schema:
                 $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
   
+  /v1/admin-staffs:
+    get:
+      security:
+        - BearerAuth: []
+      operationId: getAdminStaffList
+      parameters:
+        - in: query
+          name: search
+          schema:
+            type: string
+          required: false
+          description: Get user list based on search query
+        - in: query
+          name: pincode
+          schema:
+            type: integer
+          required: false
+          description: Get user list based on pincode query
+        - in: query
+          name: page
+          schema:
+            type: integer
+          required: false
+          description: Get user list based on page number for pagination
+        - in: query
+          name: perPageQty
+          schema:
+            type: integer
+          required: false
+          description: Get N (perPageQty) number of users in this response
+      responses:
+        '200':
+          description: Successfully fetched admin staff list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AdminStaffList"
+        'default':
+          description: 'Unsuccessful request - User/Server Error'
+          content:
+            application/json: 
+              schema:
+                $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
+  /v1/admin-staffs/v1/{adminStaffId}:
+    get:
+      security:
+        - BearerAuth: []
+      operationId: getAdminStaffInfo
+      parameters:
+        - in: path
+          name: adminStaffId
+          schema:
+            type: string
+          required: true
+          description: Admin Staff ID whose information is to be fetched
+      responses:
+        '200':
+          description: Successfully fetched admin staff info
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AdminStaff"
+        'default':
+          description: 'Unsuccessful request - User/Server Error'
+          content:
+            application/json: 
+              schema:
+                $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
+    post:
+      security:
+        - BearerAuth: []
+      operationId: updateAdminStaffInfo
+      parameters:
+        - in: path
+          name: adminStaffId
+          schema:
+            type: string
+          required: true
+          description: Admin Staff ID whose information is to be fetched
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AdminStaffUpdateRequestBody"
+      responses:
+        '200':
+          description: Successfully updated admin staff info
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AdminStaff"
+        'default':
+          description: 'Unsuccessful request - User/Server Error'
+          content:
+            application/json: 
+              schema:
+                $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
+  
+  /v1/admins:
+    get:
+      security:
+        - BearerAuth: []
+      operationId: getAdminList
+      parameters:
+        - in: query
+          name: search
+          schema:
+            type: string
+          required: false
+          description: Get user list based on search query
+        - in: query
+          name: pincode
+          schema:
+            type: integer
+          required: false
+          description: Get user list based on pincode query
+        - in: query
+          name: page
+          schema:
+            type: integer
+          required: false
+          description: Get user list based on page number for pagination
+        - in: query
+          name: perPageQty
+          schema:
+            type: integer
+          required: false
+          description: Get N (perPageQty) number of users in this response
+      responses:
+        '200':
+          description: Successfully fetched admin list
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/AdminList"
+        'default':
+          description: 'Unsuccessful request - User/Server Error'
+          content:
+            application/json: 
+              schema:
+                $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
+  /v1/admins/v1/{adminId}:  
+    get:
+      security:
+        - BearerAuth: []
+      operationId: getAdminInfo
+      parameters:
+        - in: path
+          name: adminId
+          schema:
+            type: string
+          required: true
+          description: Admin ID whose information is to be fetched
+      responses:
+        '200':
+          description: Successfully fetched admin info
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Admin"
+        'default':
+          description: 'Unsuccessful request - User/Server Error'
+          content:
+            application/json: 
+              schema:
+                $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
+    post:
+      security:
+        - BearerAuth: []
+      operationId: updateAdminInfo
+      parameters:
+        - in: path
+          name: adminId
+          schema:
+            type: string
+          required: true
+          description: Admin ID whose information is to be fetched
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/AdminUpdateRequestBody"
+      responses:
+        '200':
+          description: Successfully updated admin info
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Admin"
+        'default':
+          description: 'Unsuccessful request - User/Server Error'
+          content:
+            application/json: 
+              schema:
+                $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
+
+  /v1/user:
+    get:
+      security:
+        - BearerAuth: []
+      operationId: getUserInfo
+      responses:
+        '200':
+          description: Successfully fetched currently logged in user info
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/User"
+        'default':
+          description: 'Unsuccessful request - User/Server Error'
+          content:
+            application/json: 
+              schema:
+                $ref: 'common_schemas-contract.yml#/components/schemas/ErrorResponseBody'
+    
 components:
   securitySchemes:
     BearerAuth:
@@ -246,7 +464,7 @@ components:
       minItems: 0
     Customer:
       allOf:
-        - $ref: "#components/schemas/CustomerUpdateRequestBody"
+        - $ref: "#/components/schemas/CustomerUpdateRequestBody"
         - $ref: "common_schemas-contract.yml#/components/schemas/ObjectMetaInfo"
     SalesmanUpdateRequestBody:
       type: object
@@ -272,7 +490,7 @@ components:
       minItems: 0
     Salesman:
       allOf:
-        - $ref: "#components/schemas/SalesmanUpdateRequestBody"
+        - $ref: "#/components/schemas/SalesmanUpdateRequestBody"
         - $ref: "common_schemas-contract.yml#/components/schemas/ObjectMetaInfo"
         - type: object
           additionalProperties: false
@@ -304,7 +522,7 @@ components:
       minItems: 0
     AdminStaff:
       allOf:
-        - $ref: "#components/schemas/AdminStaffUpdateRequestBody"
+        - $ref: "#/components/schemas/AdminStaffUpdateRequestBody"
         - $ref: "common_schemas-contract.yml#/components/schemas/ObjectMetaInfo"
         - type: object
           additionalProperties: false
@@ -319,9 +537,14 @@ components:
           $ref: "#/components/schemas/Email"
         fullName:
           $ref: "#/components/schemas/FullName"
+    AdminList:
+      type: array
+      items:
+        $ref: "#/components/schemas/Admin"
+      minItems: 0
     Admin:
       allOf:
-        - $ref: "#components/schemas/AdminUpdateRequestBody"
+        - $ref: "#/components/schemas/AdminUpdateRequestBody"
         - $ref: "common_schemas-contract.yml#/components/schemas/ObjectMetaInfo"
         - type: object
           additionalProperties: false
@@ -329,6 +552,25 @@ components:
             mobileNumber:
               $ref: 'common_schemas-contract.yml#/components/schemas/MobileNumber'
           required: [mobileNumber]
+    User:
+      type: object
+      additionalProperties: false
+      properties:
+        userType:
+          $ref: "common_schemas-contract.yml#/components/schemas/UserType"
+        data:
+          oneOf:
+            - $ref: "#/components/schemas/Admin"
+            - $ref: "#/components/schemas/AdminStaff"
+            - $ref: "#/components/schemas/Salesman"
+            - $ref: "#/components/schemas/Customer"
+          discriminator:
+              propertyName: userType
+              mapping:
+                ADMIN: "#/components/schemas/Admin"
+                ADMIN_STAFF: "#/components/schemas/AdminStaff"
+                SALESMAN: "#/components/schemas/Salesman"
+                CUSTOMER: "#/components/schemas/Customer"
 
     # Internal Schemas
     CompanyName:
